update directory structure

--- a/Jeni-Ben/sass/app.scss/_type.scss
+++ b/Jeni-Ben/sass/app.scss/_type.scss
@@ -16,47 +16,16 @@ $heading_font_weight: normal;
 $heading_color: $alpha-primary;
 
 // Font importing
-
 @import url(http://fonts.googleapis.com/css?family=Artifika);
 
 //
 
+
 html {
-  font: em($font_size, ) $primary_font_family;
-  line-height: baseline($font_size);
-  color: $primary_text;
-  @media #{$mobile} {
-    -webkit-text-size-adjust: none; /* Prevent font scaling in landscape */
-  }
+  font: em($font_size, 12) $primary_font_family;
 }
-
 h1 {
-  font-size: $heading_1
+  font-size: $heading_1;
 }
 
 
-
-font
-  font-style: normal
-  font-weight: normal
-
-font-Allen
-  font-family: 'Aller'
-  src: url('fonts/Aller/Aller_Rg.ttf') format('truetype')
-
-font-Allen__bold
-  font-family: 'Aller'
-  src: url('fonts/Aller/Aller_Bd.ttf') format('truetype')
-  font-weight: bold
-
-font-artifika
-  font-family: 'artifika'
-  src: url('fonts/artifika/Artifika-Regular.ttf') format('truetype')
-
-h1
-  font-family: 'artifika', serif
-  font-size: 2em
-  margin: 0.67em 0
-
-html
-  font-family: 'Aller', sans-serif
