edits to manifests

--- a/Jeni-Ben/scss/colors/_colors.scss
+++ b/Jeni-Ben/scss/colors/_colors.scss
@@ -3,3 +3,7 @@ $alpha-primary: #B80000;    //red
 $bravo-primary: #66CC00;    //bright-green
 
 $charlie-primary: #999900;  //olive-green
+
+h1 {
+	color: $alpha-primary;
+}
