--- a/Jeni-Ben/scss/app.scss
+++ b/Jeni-Ben/scss/app.scss
@@ -1,6 +1,7 @@
+@import "config";
 @import "base/manifest";
 @import "colors/manifest";
-@import "components/manifest";
-@import "forms/manifest";
-@import "layout/manifest";
 @import "typography/manifest";
+@import "forms/manifest";
+@import "components/manifest";
+@import "layout/manifest";
