--- a/Jeni-Ben/scss/components/_footer.scss
+++ b/Jeni-Ben/scss/components/_footer.scss
@@ -3,9 +3,9 @@ footer {
   border: 3em;
   padding: 0.5em 0 0 1em;
   border-radius: 1em;
-  background-image: url(img/seattle.jpg);
+  background-image: url(/img/seattle.jpg);
   @include burn;  
- 	display: flex;
+  display: flex;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
