--- a/Jeni-Ben/scss/_config.scss
+++ b/Jeni-Ben/scss/_config.scss
@@ -24,3 +24,5 @@ $heading_font_family: $heading_font_family;
 $heading_font_weight: normal;
 $heading_color: $alpha-primary;
 
+// Form
+$form-width: 100%;
