--- a/Jeni-Ben/scss/components/_footer.scss
+++ b/Jeni-Ben/scss/components/_footer.scss
@@ -1,10 +1,10 @@
-footer {
+footer{
   font-size: $font-size;
   border: 3em;
   padding: 0.5em 0 0 1em;
   border-radius: 1em;
-  background-image: url(img/seattle.jpg);
-  @include burn;  
+  background-image: url(/img/seattle.jpg);
+  @include burn;
  	display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -23,5 +23,7 @@ footer {
   color: $delta-primary;
   display: inline-block;
   padding-left: 0;
-  text-align:left;
+  text-align: left;
 }
+
+
