--- a/Jeni-Ben/scss/forms/_forms.scss
+++ b/Jeni-Ben/scss/forms/_forms.scss
@@ -1,1 +1,35 @@
+form {
+  width: $form-width;
+}
+
+form fieldset {
+  border: none;
+  margin-bottom: 0.625em;
+}
+
+form legend {
+  color: $bravo-primary;
+  font-size: $font_size;
+}
+
+form input {
+  width: $form-width;
+}
+
+form textarea {
+  width: $form-width;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+form button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+form button:hover {
+  background-color:$charlie-primary;
+}
 
