--- a/Jeni-Ben/scss/components/_footer.scss
+++ b/Jeni-Ben/scss/components/_footer.scss
@@ -4,26 +4,25 @@ footer{
   padding: 0.5em 0 0 1em;
   border-radius: 1em;
   background-image: url(/img/seattle.jpg);
-
   @include burn;
   display: flex;
-  justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: center;
-  align-items: flex-end;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: center;
 }
 
 .footer-image {
   padding: 1em;
   width: 5em;
+  margin-left: 60%;
 }
 
 .footer-location {
   font-family: $primary_font_family;
   color: $delta-primary;
   display: inline-block;
-  padding-left: 0;
   text-align: left;
 }
 
