--- a/Jeni-Ben/scss/components/_buttons.sass
+++ b/Jeni-Ben/scss/components/_buttons.sass
@@ -2,7 +2,6 @@ button
   display: block
   margin-left: auto
   margin-right: auto
-
-button:hover
-  color: $charlie-primary
+  &:hover
+    color: $charlie-primary
 
