--- a/Jeni-Ben/scss/layout/_manifest.scss
+++ b/Jeni-Ben/scss/layout/_manifest.scss
@@ -1,4 +1,6 @@
 @import "grid";
 @import "responsive";
-@import "functions";
-@import "mixins";
+@import "gridfunctions";
+@import "clear-mixin";
+@import "column-mixin";
+@import "wrapper-mixin";
